Changelog
=========


2.0.2 (unreleased)
------------------

- Fix item expression in indexed_task_link function.
  Issue #1412 Optimierung Mandant des Auftraggebers
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1412
  [jone]

- Made adjustments on the XLSReport: column order, translations, footer
  Issue #1286 Aufgabenexport um Dossiertitel erweitern.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1286
  [phgross]

- Added French translations
  [ttschanz]

- linked() helper: Use a special helper for subtasks.
  Issue #1373 Spezielles Icon fuer Unteraufgaben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1373
  [jone]

- Add is_subtask column to task global index.
  Issue #1373 Spezielles Icon fuer Unteraufgaben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1373
  [jone]

- Fixed tests: Added plone.app.testing to tests_require
  [lgraf]

- we prevent to raise database-error if we have a too long breadcrumb_title string by shorten the string
  Issue #1393 og.globalindex: ORA-12899: value too large for column "OG_GI"."TASKS"."BREADCRUMB_TITLE"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1393

- Improve "indexed_task_link" tabbedview helper, so that remote-tasks have a seperate icon.
  Issue #1300 Mandantenuebergreifende Aufgaben sollten speziell markiert werden koennen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1300
  [jone]

- Increased the size of the breadcrumb title form 256 to 512.
  Issue #1393 og.globalindex: ORA-12899: value too large for column "OG_GI"."TASKS"."BREADCRUMB_TITLE"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1393
  [phgross]

- Adjust the Task indexer: get the containing_dossier value with the indexer instead over the brain.
  Issue #1253 Darstellung Dossiertitel bei Suchresultaten (Subdossiers, Dokumente, Aufgaben)