@@ -5,6 +5,9 @@ Changelog
 2.0.2 (unreleased)
 ------------------
 
+- Use get_css_class for globalindex task listings.
+  [jone]
+
 - Fix item expression in indexed_task_link function.
   Issue #1412 Optimierung Mandant des Auftraggebers
   https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1412
